--- a/assets/clash.html
+++ b/assets/clash.html
@@ -111,7 +111,7 @@
 			<p>筛选代理类型(此种方式你只能自己维护配置文件)：https://proxy.tgbot.co/clash/proxies?type=ss,ssr,vmess</p>
             <p>所有节点的Provider(不是都可以用)：<a href="https://proxy.tgbot.co/clash/proxies?type=all">https://proxy.tgbot.co/clash/proxies?type=all</a></p>
             <br>
-            <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">https://github.com/zu1k/proxypool</a></p>
+            <p>抓取程序已开源：<a href="https://github.com/liugc/proxypool">https://github.com/liugc/proxypool</a></p>
         </div>
     </div>
 </div>
