--- a/assets/index.html
+++ b/assets/index.html
@@ -119,7 +119,7 @@
             <p>Surge proxy list：<a href="https://proxy.tgbot.co/surge/proxies">https://proxy.tgbot.co/surge/proxies</a>
             </p>
             <br>
-            <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">https://github.com/zu1k/proxypool</a></p>
+            <p>抓取程序已开源：<a href="https://github.com/liugc/proxypool">https://github.com/liugc/proxypool</a></p>
         </div>
     </div>
 </div>
