--- a/assets/surge.html
+++ b/assets/surge.html
@@ -78,7 +78,7 @@
 	  <p>Surge配置文件：<a href="https://proxy.tgbot.co/surge/config">https://proxy.tgbot.co/surge/config</a> <a href="surge3:///install-config?url=https://proxy.tgbot.co/surge/config">一键导入</a></p>
 	  <p>Surge proxy list：<a href="https://proxy.tgbot.co/surge/proxies">https://proxy.tgbot.co/surge/proxies</a></p>
 		<br>
-	  <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">https://github.com/zu1k/proxypool</a></p>
+	  <p>抓取程序已开源：<a href="https://github.com/liugc/proxypool">https://github.com/liugc/proxypool</a></p>
 	</div>
   </div>
 </div>
