--- a/assets/surge.html
+++ b/assets/surge.html
@@ -75,8 +75,8 @@
 	<div class='article'>
 	  <p>自动抓取tg频道、订阅地址、公开互联网上的ss、vmess节点信息，聚合去重后提供Surge节点列表，每10分钟更新</p>
 		<br>
-	  <p>Surge配置文件：<a href="https://proxy.tgbot.co/surge/config">https://proxy.tgbot.co/surge/config</a> <a href="surge3:///install-config?url=https://proxy.tgbot.co/surge/config">一键导入</a></p>
-	  <p>Surge proxy list：<a href="https://proxy.tgbot.co/surge/proxies">https://proxy.tgbot.co/surge/proxies</a></p>
+	  <p>Surge配置文件：<a href="https://proxypooliu.herokuapp.com/surge/config">https://proxypooliu.herokuapp.com/surge/config</a> <a href="surge3:///install-config?url=https://proxypooliu.herokuapp.com/surge/config">一键导入</a></p>
+	  <p>Surge proxy list：<a href="https://proxypooliu.herokuapp.com/surge/proxies">https://proxypooliu.herokuapp.com/surge/proxies</a></p>
 		<br>
 	  <p>抓取程序已开源：<a href="https://github.com/liugc/proxypool">https://github.com/liugc/proxypool</a></p>
 	</div>
