--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
-    <title>免费节点</title>
+    <title>问君能有几多愁</title>
     <style type='text/css'>
         body {
             background-color: white;
@@ -103,14 +103,14 @@
     <div class='section friendly'>
         <h1><strong>免费节点</strong></h1>
         <div class='article'>
-            <p>自动抓取tg频道、订阅地址、公开互联网上的ss、ssr、vmess节点信息，聚合去重后提供节点列表，每10分钟更新</p>
+            <p>白日依山尽黄河入海流，每10分钟更新</p>
             <br>
             <h5><a href="/clash">Clash</a></h5>
-            <p>Clash配置文件：<a href="https://proxygool.herokuapp.com/clash/config">https://proxygool.herokuapp.com/clash/config</a> <a
-                        href="clash://install-config?url=https://proxygool.herokuapp.com/clash/config">一键导入</a></p>
-            <p>Clash proxy-provider(Shadowrocket添加订阅方式可用)：<a href="https://proxygool.herokuapp.com/clash/proxies">https://proxygool.herokuapp.com/clash/proxies</a>
+            <p>Clash配置文件：<a href="https://angle47.herokuapp.com/clash/config">https://angle47.herokuapp.com/clash/config</a> <a
+                        href="clash://install-config?url=https://angle47.herokuapp.com/clash/config">一键导入</a></p>
+            <p>Clash proxy-provider(Shadowrocket添加订阅方式可用)：<a href="https://angle47.herokuapp.com/clash/proxies">https://angle47.herokuapp.com/clash/proxies</a>
             </p>
-			<p>所有节点的Provider(不是都可以用)：<a href="https://proxygool.herokuapp.com/clash/proxies?type=all">https://proxygool.herokuapp.com/clash/proxies?type=all</a>
+			<p>所有节点的Provider(不是都可以用)：<a href="https://angle47.herokuapp.com/clash/proxies?type=all">https://angle47.herokuapp.com/clash/proxies?type=all</a>
 			</p>
 			<br>
 			<h5><a href="/surge">Surge</a></h5>
@@ -119,7 +119,7 @@
             <p>Surge proxy list：<a href="https://proxy.tgbot.co/surge/proxies">https://proxy.tgbot.co/surge/proxies</a>
             </p>
             <br>
-            <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">https://github.com/zu1k/proxypool</a></p>
+            <p>程序已开源：<a href="https://github.com/zu1k/proxypool">https://github.com/zu1k/proxypool</a></p>
         </div>
     </div>
 </div>
